--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 streamlit>=1.44.1
+watchdog==3.0.0
+python-dotenv==1.0.0
 psycopg2-binary>=2.9.10
+python-jose==3.3.0
+passlib==1.7.4
+bcrypt==4.0.1
+cryptography==42.0.5
 google-auth>=2.38.0
 google-auth-oauthlib>=1.2.1
 google-api-python-client>=2.166.0
