--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ psycopg2-binary>=2.9.10
 python-jose==3.3.0
 passlib==1.7.4
 bcrypt==4.0.1
-cryptography==42.0.5
+cryptography
 google-auth>=2.38.0
 google-auth-oauthlib>=1.2.1
 google-api-python-client>=2.166.0
